syntax = "proto3";

option java_package="com.nidhi.grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// Interface exported by the server.
service UserService {
  rpc createUser (UserReq) returns (UserRes) {};
  rpc updateUser (UserReq) returns (UserRes) {};
  rpc findUsersByFilter(UserFilter) returns (stream UserRes) {};
  rpc deleteUser(google.protobuf.Int64Value) returns (google.protobuf.Empty) {};
  rpc findUserById (google.protobuf.Int64Value) returns (UserRes) {};
  rpc findAllUsers(google.protobuf.Empty) returns (stream UserRes) {};
  rpc deleteUsersInBatch(google.protobuf.Empty) returns (google.protobuf.Empty){};
}

//User filter object
message UserFilter {
  int64 id = 1;
  string username = 2;
}

//User result list
message UserList {
  repeated UserReq resultList=1;
  google.protobuf.Int64Value resultCount=2;
}

//User object
message UserReq {
  int64 Id = 1;
  string username = 2;
  string password = 3;
  string email=4;
  string contact=5;
  string city=6;
}
message UserRes {
  int64 Id = 1;
  string username = 2;
  string password = 3;
  string email=4;
  string contact=5;
  string city=6;

}

message GetUserRequest {
  int32 userId = 1;
}
